tests/snapshots/wire_format_snapshots__api_coordination_rulings_uninitialised.snap
---
source: tests/wire_format_snapshots.rs
expression: uninitialised.data
---
{
  "conflicts": [],
  "cursor": null,
  "observed_at": null,
  "rulings": [],
  "schema_version": 11,
  "store_state": "uninitialised",
  "truncated": false
}
