tests/snapshots/wire_format_snapshots__api_dependents_app_api.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "node": "app.api",
  "nodes": [
    "app.core"
  ],
  "schema_version": 12
}
