tests/snapshots/wire_format_snapshots__api_graph.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "edges": [
    {
      "description": "owns",
      "from": "app",
      "kind": "Ownership",
      "to": "app.api"
    },
    {
      "description": "owns",
      "from": "app",
      "kind": "Ownership",
      "to": "app.core"
    },
    {
      "description": "reports",
      "from": "app.api",
      "kind": "Dependency",
      "to": "app.core"
    },
    {
      "description": "serves",
      "from": "app.core",
      "kind": "Dependency",
      "to": "app.api"
    }
  ],
  "nodes": [
    {
      "children": [
        "app.core",
        "app.api"
      ],
      "contracts": [],
      "description": "desc",
      "files": [],
      "id": "app",
      "kind": "System",
      "name": "App",
      "owns_files": false,
      "parent": null,
      "paths": [],
      "span": {
        "column": 1,
        "end_column": 7,
        "end_line": 1,
        "file": "<blueprint>",
        "line": 1
      },
      "state": "Synced",
      "tags": [
        "product"
      ]
    },
    {
      "children": [],
      "contracts": [
        "./meta/contracts/api.md"
      ],
      "description": "api",
      "files": [
        "src/api/lib.rs"
      ],
      "id": "app.api",
      "kind": "Container",
      "name": "Api",
      "owns_files": true,
      "parent": "app",
      "paths": [
        "./src/api"
      ],
      "span": {
        "column": 5,
        "end_column": 14,
        "end_line": 6,
        "file": "<blueprint>",
        "line": 6
      },
      "state": "Synced",
      "tags": [
        "backend"
      ]
    },
    {
      "children": [],
      "contracts": [
        "./meta/contracts/core.md"
      ],
      "description": "core",
      "files": [
        "src/core/lib.rs"
      ],
      "id": "app.core",
      "kind": "Module",
      "name": "Core",
      "owns_files": true,
      "parent": "app",
      "paths": [
        "./src/core"
      ],
      "span": {
        "column": 5,
        "end_column": 11,
        "end_line": 2,
        "file": "<blueprint>",
        "line": 2
      },
      "state": "Synced",
      "tags": [
        "backend"
      ]
    }
  ],
  "schema_version": 10
}
