tests/snapshots/wire_format_snapshots__api_meta.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "available_commands": [
    {
      "name": "get",
      "request": "NodeRequest",
      "response": "NodeResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "neighbourhood",
      "request": "NeighbourhoodRequest",
      "response": "NeighbourhoodResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "contract",
      "request": "NodeRequest",
      "response": "ContractResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "docstring",
      "request": "DocstringRequest",
      "response": "DocstringResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "files",
      "request": "NodeRequest",
      "response": "FilesResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "bundle",
      "request": "NodeRequest",
      "response": "BundleResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "deps",
      "request": "DependencyRequest",
      "response": "DependencyResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "deps",
      "request": "DependencyRequest",
      "response": "DependencyResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "order",
      "request": "OrderRequest",
      "response": "OrderResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "islands",
      "request": "IslandsRequest",
      "response": "IslandsResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "frontier",
      "request": "FrontierRequest",
      "response": "FrontierResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "graph",
      "request": "GraphRequest",
      "response": "GraphResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "lint",
      "request": "LintRequest",
      "response": "LintResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "status",
      "request": "StatusRequest",
      "response": "StatusResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "pending",
      "request": "PendingRequest",
      "response": "PendingResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "rationale",
      "request": "NodeRequest",
      "response": "RationaleResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "todos",
      "request": "ArtefactNodeRequest",
      "response": "TodosResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "decisions",
      "request": "ArtefactNodeRequest",
      "response": "DecisionsResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "research",
      "request": "NodeRequest",
      "response": "ResearchResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "sources",
      "request": "NodeRequest",
      "response": "SourcesResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "changes",
      "request": "ChangesRequest",
      "response": "ChangesResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "show",
      "request": "ShowChangeRequest",
      "response": "ShowChangeResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "hook",
      "request": "HookRequest",
      "response": "HookReport",
      "safety": "ReadOnly"
    },
    {
      "name": "health",
      "request": "HealthRequest",
      "response": "HealthResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "remediate",
      "request": "RemediateRequest",
      "response": "RemediateResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "ui",
      "request": "UiRequest",
      "response": "UiServerResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "scan",
      "request": "ScanRequest",
      "response": "ScanResponse",
      "safety": "Mutating"
    },
    {
      "name": "archive",
      "request": "ArchiveRequest",
      "response": "ArchiveResponse",
      "safety": "Mutating"
    },
    {
      "name": "rename",
      "request": "RenameRequest",
      "response": "RenameResponse",
      "safety": "Mutating"
    },
    {
      "name": "init",
      "request": "InitRequest",
      "response": "InitResponse",
      "safety": "Mutating"
    },
    {
      "name": "context",
      "request": "ContextRequest",
      "response": "ContextResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "init_from_code",
      "request": "InitFromCodeRequest",
      "response": "InitFromCodeResponse",
      "safety": "Mutating"
    },
    {
      "name": "refine",
      "request": "RefineRequest",
      "response": "RefineResponse",
      "safety": "Mutating"
    },
    {
      "name": "draft list",
      "request": "DraftsRequest",
      "response": "DraftsResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "draft show",
      "request": "DraftShowRequest",
      "response": "DraftShowResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "draft discard",
      "request": "DraftDiscardRequest",
      "response": "DraftDiscardResponse",
      "safety": "Mutating"
    },
    {
      "name": "draft edit",
      "request": "DraftEditRequest",
      "response": "DraftEditResponse",
      "safety": "Mutating"
    },
    {
      "name": "draft accept",
      "request": "DraftAcceptRequest",
      "response": "DraftAcceptResponse",
      "safety": "Mutating"
    },
    {
      "name": "draft create",
      "request": "SummariseRequest",
      "response": "SummariseResponse",
      "safety": "Mutating"
    },
    {
      "name": "watch",
      "request": "WatchRequest",
      "response": "WatchResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "ui_meta",
      "request": "UiMetaRequest",
      "response": "UiMetaResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "blueprint",
      "request": "BlueprintRequest",
      "response": "BlueprintResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "beads",
      "request": "NodeRequest",
      "response": "BeadsResponse",
      "safety": "ReadOnly"
    },
    {
      "name": "locate",
      "request": "LocateRequest",
      "response": "LocateResponse",
      "safety": "ReadOnly"
    }
  ],
  "last_reconciled": "[timestamp]",
  "schema_version": 8,
  "version": "[version]"
}
