tests/snapshots/wire_format_snapshots__api_node_app_api.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "children": [],
  "contracts": [
    "./meta/contracts/api.md"
  ],
  "decisions": [
    "dec.api"
  ],
  "description": "api",
  "files": [
    "src/api/lib.rs"
  ],
  "id": "app.api",
  "kind": "Container",
  "name": "Api",
  "owns_files": true,
  "parent": "app",
  "paths": [
    "./src/api"
  ],
  "schema_version": 6,
  "span": {
    "column": 5,
    "end_column": 14,
    "end_line": 6,
    "file": "<blueprint>",
    "line": 6
  },
  "state": "Synced",
  "tags": [
    "backend"
  ]
}
