tests/snapshots/wire_format_snapshots__api_node_app_api_contract.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "contract": "# API Contract\nGET /api/status returns health details.",
  "contracts": [
    {
      "body": "# API Contract\nGET /api/status returns health details.",
      "declared_by": "app.api",
      "node": "app.api",
      "path": "./meta/contracts/api.md",
      "title": "API Contract"
    }
  ],
  "node": "app.api",
  "schema_version": 9
}
